--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.3",
+    "axios": "^0.19.0",
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
