--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "just-a-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://afroserg.github.io/gykn",
   "dependencies": {
     "antd": "^3.23.3",
     "axios": "^0.19.0",
